syntax = "proto3";

package dhpcs.liquidity.model;

option java_package = "com.dhpcs.liquidity.proto.model";

import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

message Member {
    string id = 1;
    repeated bytes owner_public_keys = 2;
    google.protobuf.StringValue name = 3;
    google.protobuf.Struct metadata = 4;
}

message Account {
    string id = 1;
    repeated string owner_member_ids = 2;
    google.protobuf.StringValue name = 3;
    google.protobuf.Struct metadata = 4;
}

message Transaction {
    string id = 1;
    string from = 2;
    string to = 3;
    string value = 4;
    string creator = 5;
    int64 created = 6;
    google.protobuf.StringValue description = 7;
    google.protobuf.Struct metadata = 8;
}

message Zone {
    string id = 1;
    string equity_account_id = 2;
    repeated Member members = 3;
    repeated Account accounts = 4;
    repeated Transaction transactions = 5;
    int64 created = 6;
    int64 expires = 7;
    google.protobuf.StringValue name = 8;
    google.protobuf.Struct metadata = 9;
}
